Avance CU individual conectado con Ejercer Turno
Hacer que el MVC tenga un escuchador y que le llegue la notificación cuando se creo la partida , muestre un joption pane y que no pueda crearla si esta true la partidaCreada.